# steve

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg.json
include/: context.hpp
include/app/: display.hpp
include/pathtracer/: camera.hpp  geometry.cuh  host_defs.hpp  integrator.cuh  material.cuh  parser.hpp  ray.cuh  render.hpp  sampling.cuh  scene.hpp  texture.hpp
include/pathtracer/device/: geometry.cuh  integrator.cuh  lights.cuh  material.cuh  ray.cuh  reservoir.cuh  restir.cuh  sampling.cuh
include/pathtracer/host/: camera.hpp  material_buffer.hpp  parser.hpp  render.hpp  scene.hpp  texture.hpp
include/pathtracer/shared/: geometry_defs.cuh  integrator_defs.cuh  light_defs.cuh  material_defs.cuh  ray_defs.cuh  reservoir_defs.cuh
include/utils/: shader.hpp
src/app/: app.cpp  display.cpp
src/pathtracer/: integrator.cu  parser.cpp  render.cpp  scene.cpp  texture.cpp
src/pathtracer/device/: gbuffer.cu  integrator.cu  restir_integrator.cu  spatial.cu  temporal.cu
src/pathtracer/host/: material_buffer.cpp  parser.cpp  render.cpp  scene.cpp  texture.cpp
src/utils/: embed.cpp  shader.cpp
